1、重新实现url，旧的从java20移除 2、将zed的配置文件夹添加到gitignore中